--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,15 @@
-name: Build and Release macOS App
+name: "Build macOS App"
 
 on:
   push:
-    tags:
-      - 'v*'
-    branches:
-      - main
-      - master
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to build'
-        required: false
-        default: 'latest'
-
-permissions:
-  contents: write
+    branches: [ main ]
 
 jobs:
   build-macos:
+    permissions:
+      contents: write
     runs-on: macos-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,26 +17,25 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
           cache: 'npm'
 
-      - name: Install Rust
+      - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: x86_64-apple-darwin,aarch64-apple-darwin
+          targets: aarch64-apple-darwin,x86_64-apple-darwin
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build frontend
-        run: npm run build
-
-      - name: Install Tauri CLI
-        run: npm install -g @tauri-apps/cli
-
-      - name: Build Tauri app (with verbose output)
-        run: |
-          export RUST_BACKTRACE=1
-          npm run tauri build -- --verbose
+      - name: Build Tauri app
+        uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tagName: v__VERSION__
+          releaseName: 'App v__VERSION__'
+          releaseBody: 'אפליקציית דסקטופ חדשה'
+          releaseDraft: false
+          prerelease: false
+          args: '--target universal-apple-darwin'
