--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,17 +20,45 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-apple-darwin,x86_64-apple-darwin
+          targets: aarch64-apple-darwin
 
       - name: Install dependencies
         run: bun install
 
-      - name: Create valid icon
+      - name: Remove icon requirement
         run: |
-          mkdir -p src-tauri/icons
-          curl -L -o "src-tauri/icons/icon.png" "https://via.placeholder.com/1024x1024/3498db/ffffff?text=APP"
-          curl -L -o "src-tauri/icons/32x32.png" "https://via.placeholder.com/32x32/3498db/ffffff?text=APP"
-          curl -L -o "src-tauri/icons/128x128.png" "https://via.placeholder.com/128x128/3498db/ffffff?text=APP"
+          # יצירת tauri.conf.json ללא אייקונים
+          cat > src-tauri/tauri.conf.json << 'EOF'
+          {
+            "$schema": "../node_modules/@tauri-apps/cli/schema.json",
+            "productName": "project-manager-pro",
+            "version": "0.1.0",
+            "identifier": "com.projectpulse.app",
+            "build": {
+              "beforeDevCommand": "bun run dev",
+              "beforeBuildCommand": "bun run build",
+              "frontendDist": "../dist",
+              "devUrl": "http://localhost:5173"
+            },
+            "app": {
+              "windows": [
+                {
+                  "title": "Project Pulse",
+                  "width": 1200,
+                  "height": 800
+                }
+              ],
+              "security": {
+                "csp": null
+              }
+            },
+            "bundle": {
+              "active": true,
+              "targets": "all",
+              "category": "Productivity"
+            }
+          }
+          EOF
 
       - name: Build for Apple Silicon Mac  
         run: bun tauri build --target aarch64-apple-darwin
