--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,6 @@ tauri-plugin-dialog = "2.0"
 tauri-plugin-shell = "2.0"
 tauri-plugin-fs = "2.0"
 tauri-plugin-opener = "2.0"
-
+dirs = "5.0"
 [features]
 custom-protocol = [ "tauri/custom-protocol" ]
