--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "project-manager-pro"
 version = "1.0.0"
-description = "אפליקציית ניהול פרויקטים מתקדמת"
+description = "Advanced project and task management system"
 authors = ["Project Manager Team"]
 license = "MIT"
 repository = ""
@@ -15,11 +15,13 @@ tauri-build = { version = "2.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0", features = ["macos-private-api"] }
+tauri = { version = "2.0", features = [] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-shell = "2.0"
 tauri-plugin-fs = "2.0"
 tauri-plugin-opener = "2.0"
 dirs = "5.0"
+env_logger = "0.10"
+
 [features]
 custom-protocol = [ "tauri/custom-protocol" ]
