--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
-[workspace]
-members = ["src-tauri"]
-resolver = "2"
+[dependencies]
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.5", features = ["api-all"] }
+urlencoding = "2.1"
