--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "project-pulse-he",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Advanced project and task management system in Hebrew",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
+  "keywords": ["project-management", "tasks", "hebrew", "productivity", "desktop-app"],
+  "author": "Project Manager Team",
+  "license": "MIT",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
