--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,9 @@ jobs:
           echo "=== Rust dependencies ==="
           cat src-tauri/Cargo.toml | grep tauri
 
-      # Build with Tauri Action v1 (supports Tauri v2)
+      # Build with Tauri Action v0 (stable version)
       - name: Build Tauri app
-        uses: tauri-apps/tauri-action@v1
+        uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
