--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,15 +13,14 @@ rust-version = "1.70"
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-serde_json = "1.0"
+tauri = { version = "2.0", features = ["shell-open"] }
+tauri-plugin-dialog = "2.3"
+tauri-plugin-fs = "2.3"
+tauri-plugin-shell = "2.3"
+tauri-plugin-opener = "2.3"
+tauri-plugin-notification = "2.3"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0", features = [] }
-tauri-plugin-dialog = "2.0"
-tauri-plugin-shell = "2.0"
-tauri-plugin-fs = "2.0"
-tauri-plugin-opener = "2.0"
-dirs = "5.0"
-env_logger = "0.10"
+serde_json = "1.0"
 
 [features]
 custom-protocol = [ "tauri/custom-protocol" ]
