--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "project-manager-pro"
+name = "project-pulse-he"
 version = "1.0.0"
-description = "Advanced project and task management system"
-authors = ["Project Manager Team"]
-license = "MIT"
+description = "Project Pulse HE - Advanced Project Management System in Hebrew"
+authors = ["you"]
+license = ""
 repository = ""
-default-run = "project-manager-pro"
+default-run = "project-pulse-he"
 edition = "2021"
 rust-version = "1.70"
 
@@ -13,14 +13,19 @@ rust-version = "1.70"
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0" }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "2.0", features = ["shell-open"] }
 tauri-plugin-dialog = "2.3"
 tauri-plugin-fs = "2.3"
 tauri-plugin-shell = "2.3"
 tauri-plugin-opener = "2.3"
 tauri-plugin-notification = "2.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 
 [features]
-custom-protocol = [ "tauri/custom-protocol" ]
+# by default Tauri runs in production mode
+# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devUrl` is a "localhost" URL
+default = ["custom-protocol"]
+# this feature is used for production builds or when `devUrl` points to the filesystem
+# DO NOT REMOVE!!
+custom-protocol = ["tauri/custom-protocol"]
